objects/Field_Value_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Field value setting to avoid the hard coding of values in Apex triggers or Classes.</description>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Email__c</fullName>
        <description>This field has the distribution list email &apos;AMSmilestones@shl.com&apos;</description>
        <label>Milestone Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_email_to_AMSmilestone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked, an email is sent to distribution list AMSmilestones@cebglobal.com</description>
        <label>Skip email to AMSmilestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Field Value Setting</label>
</CustomObject>